--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
    
 </nav>
 
-<div class="row align-items-center mt-4">
+<div class="row align-items-center mt-4 d-none d-md-block d-lg-block" style="visibility: hidden;">
         <div class="col-md-5 col-sm-12 mx-auto"> <!--  d-none d-md-block d-lg-block-->
-            <div class="err-msg">
+            <div class="err-msg" >
                 Error messages goes here and the field with error gets highlighted
             </div>
         </div>
@@ -54,7 +54,7 @@
     </div>
  <!--main partion -->
 
-<div class="container main-area mt-5">
+<div class="container main-area">
   <div class="row center-border">
     <!--first partion -->
     <div class="col-sm-6 left-partition">
@@ -95,35 +95,56 @@
     <!--end first partion -->
     <!--second partion -->
   
+
+  <!-- -->
+  <div class="col-md-6  my-4 nav-only-cell">
+    <div class="err-msg" >
+                Error messages goes here and the field with error gets highlighted
+            </div>    
+  </div>
+
+  <!---->
     <div class="col-sm-6 right-partition">
-       <div class="row justify-content-md-center regSection" style="/* display: none */">
+       <div class="row justify-content-md-center regSection">
         <div class="col-md-10 ">
        <form action="/action_page.php">
-        <div class="red-t mb-3  font-weight-bold text-center regist-head">  PLEASE ENTER THE DETAILS BELOW </div>
+        <div class="red-t m-3  font-weight-bold text-center regist-head">  PLEASE ENTER THE DETAILS BELOW </div>
       <div class="form-group">        
-        <input type="text" class="form-control" id="firstname" placeholder="First Name">
+        <input type="text" class="form-control" id="firstname" placeholder="Full name*">
       </div>
       <div class="form-group">
-        <input type="email" class="form-control" id="pwd" placeholder="Email ID">
+        <input type="email" class="form-control" id="pwd" placeholder="Email ID*">
       </div>
        <div class="form-group">
-        <input type="number" class="form-control" id="pwd" placeholder="Mobile Number">
+        <input type="number" class="form-control" id="pwd" placeholder="Mobile number*">
       </div>
        <div class="form-group">
-        <input type="text" class="form-control" id="pwd" placeholder="State you reside in *">
+        <select class="form-control" id="exampleFormControlSelect1" placeholder="">
+          <option>State you reside in*</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>
       </div>
        <div class="form-group">
-        <input type="text" class="form-control" id="pwd" placeholder="City you reside In *">
+        <select class="form-control" id="exampleFormControlSelect1" placeholder="">
+          <option>City you reside in*</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
+        </select>        
       </div>
       <div class="form-group">
-        <input type="text" class="form-control" id="pwd" placeholder="Voucher Code">
+        <input type="text" class="form-control" id="pwd" placeholder="Voucher code*">
       </div>
       <div class="form-group form-check">
       <label class="form-check-label">
         <input class="form-check-input" type="checkbox"> I agree to program’s <a class="red-t"> terms and conditions </a>
         </label>
       </div>
-      <div class="form-group">
+      <div class="form-group  text-center">
       <label class="form-check-label">
          <div class="g-recaptcha" data-sitekey="=== Your site key ==="></div>
         </label>
@@ -140,25 +161,25 @@
         <div class="col-md-12">
        <form action="/action_page.php">
         <div class="row justify-content-md-center gray-t">
-            <div class="col-md-10 mt-5 mb-5 text-center"> VALIDATE YOUR MOBILE NUMBER </div>
-            <div class="col-md-7 mb-5 mt-2"> Please enter the One Time Password (OTP) sent to +91 - 9876543210 </div>
-            <div class="col-md-9">
+            <div class="col-md-10 mt-5 mb-5 text-center font-weight-bold"> VALIDATE YOUR MOBILE NUMBER </div>
+            <div class="col-md-7 mb-5 mt-2 text-center"> <h6>Please enter the One Time Password (OTP) sent to +91 - 9876543210 </h6></div>
+            <div class="col-md-7">
             <div class="form-group">        
               <input type="text" class="form-control" id="firstname" placeholder="Enter OTP here">
             </div>
             </div>
-            <div class="col-md-7">
+            <div class="col-md-7 text-center">
               <label class="form-check-label">
                 Resend OTP in <span class="red-t"> 00:60 seconds</span>
                 </label>
             </div>
-            <div class="col-md-8 mt-5 mb-5">
+            <div class="col-md-9 mt-5 mb-5 text-center">
                <label class="form-check-label">
                  <div class="g-recaptcha" data-sitekey="=== Your site key ==="></div>
                 </label>
             </div>
 
-            <div class="col-md-12 mt-4">
+            <div class="col-md-7 mt-4">
               <div class="form-group">
                 <button type="submit" class="btn btn-submit">VALIDATE WITH OTP</button>
                </div>
