--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!--first partion -->
     <div class="col-sm-6 left-partition">
       <div class="row">
-         <div class="col-md-12 ">
+         <div class="col-md-12 carousal-padding-0">
       <!--carousal -->
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
