--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <div class="row center-border">
     <!--first partion -->
     <div class="col-sm-6 left-partition">
-      <div class="row">
+      <div class="row carousal-row">
          <div class="col-md-12 carousal-padding-0">
       <!--carousal -->
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
