--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    
 </nav>
 
-<div class="row align-items-center mt-4 d-none d-md-block d-lg-block" style="visibility: hidden;">
+<div class="row align-items-center mt-4 d-none d-md-block d-lg-block NotValid" style="visibility: hidden;">
         <div class="col-md-5 col-sm-12 mx-auto"> <!--  d-none d-md-block d-lg-block-->
             <div class="err-msg" >
                 Error messages goes here and the field with error gets highlighted
@@ -97,7 +97,7 @@
   
 
   <!-- -->
-  <div class="col-md-6  my-4 nav-only-cell">
+  <div class="col-md-6  my-4 nav-only-cell NotValid">
     <div class="err-msg" >
                 Error messages goes here and the field with error gets highlighted
             </div>    
