--- a/prize-one.html
+++ b/prize-one.html
@@ -4,7 +4,7 @@
   <title>HAVELLS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -143,7 +143,7 @@
   });   
 
 
-  $(document).on('click','.btn-redirect',function(){ alert('clickeddddd');
+  $(document).on('click','.btn-redirect',function(){ 
       window.location.href = "index.html";
   })
 </script>
